welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: not found: value Yellow
faireV(Yellow)
       ^